# Links-Connect

./: -lb docs  .gitignore  pyproject.toml
.github/workflows/: tests.yml
apps/agent/: __init__.py  agent.py  config.py  logger.py  main.py
apps/agent/application/: __init__.py  engine_hours_service.py  machine_dashboard_service.py  machine_service.py  models.py  service_service.py
apps/agent/engine_hours/: __init__.py  counter.py  events.py  exceptions.py  models.py  repository.py  sqlite_repository.py
apps/agent/infrastructure/: database.py
apps/agent/machines/: __init__.py  exceptions.py  models.py  repository.py  sqlite_repository.py
apps/agent/service/: __init__.py  exceptions.py  models.py  monitor.py  policies.py
apps/api/: dependencies.py  main.py
apps/api/routers/: __init__.py  engine_hours.py  health.py  machines.py
links_connect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/agent/application/: test_engine_hours_service.py  test_machine_dashboard_service.py  test_machine_service.py  test_service_service.py
tests/agent/engine_hours/: test_counter.py  test_sqlite_repository.py
tests/agent/machines/: test_models.py  test_sqlite_repository.py
tests/agent/service/: test_monitor.py
tests/api/: test_machines.py  test_main.py
